        now returns a character column (the quotes should not
        be used). Thanks to Joseph Voelkel for reporting.
        
    o   setkey has been made robust in several ways in an attempt
        to fix #1465 ('R crashes after sekey') reported by Eugene
        Tyurin. We have been unable to reproduce the problem so
        pending user confirm.
                
    
USER-VISIBLE CHANGES

    o   The startup banner checks to see if a new version
        is available and if there is, suggests upgrading.
        Suppressable with suppressPackageStartupMessages.
        
        
DEPRECATED & DEFUNCT

   o    Use of the DT() alias in j is no longer caught and
        replaced, and is now fully removed. As warned in NEWS
        for v1.5.3, v1.4, and FAQs 2.6 and 2.7.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.2   **
        **                                         **
        *********************************************

NEW FEATURES

   o    setkey no longer copies the whole table and should be
        faster for large tables. Each column is reordered by reference
        (in C) using one column of working memory, FR#1006. User
        defined attributes on the original table are now also
        retained (thanks to Thell Fowler for reporting).
        
   o    A new symbol .N is now available to j, containing the
        number of rows in the group. This may be useful when
        the column names are not known in advance, for
        convenience generally, and for efficiency.
        

        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.1   **
        **                                         **
        *********************************************
        
NEW FEATURES

   o    j's environment is now consistently reused so